# tushare-general-data-downloader

./: .env.example  .gitignore  README.md  downloader.py  environment.yml  pyproject.toml
src/tushare_general_data_downloader/: __init__.py  api.py  cli.py  constants.py  env.py  fetchers.py  storage.py  windowing.py
tests/: test_share_float_autosplit.py  test_storage.py  test_windowing.py
